fixes ng-if flickering

--- a/carbone-iron/app/styles/main.scss
+++ b/carbone-iron/app/styles/main.scss
@@ -4,3 +4,7 @@
   width: 96px;
   height: 96px;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+display: none !important;
+}
